--- a/.github/workflows/puppeteer-cron.yml
+++ b/.github/workflows/puppeteer-cron.yml
@@ -28,4 +28,4 @@ jobs:
           PUPPETEER_EXECUTABLE_PATH: "/usr/bin/google-chrome-stable"
           VERIFICATION_VALUE: ${{ secrets.VERIFICATION_VALUE }}
           APPLICATION_VALUE: ${{ secrets.APPLICATION_VALUE }}
-          DOMAIN: ${{ secrets.DOMAIN }}
+          APP_DOMAIN: ${{ secrets.APP_DOMAIN }}
