--- a/.github/workflows/puppeteer-cron.yml
+++ b/.github/workflows/puppeteer-cron.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   run-puppeteer:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,9 +21,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Print environment variables
+        run: printenv
+
       - name: Run Puppeteer script
         run: node index.ts
         env:
+          CI: true
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: "true"
           PUPPETEER_EXECUTABLE_PATH: "/usr/bin/google-chrome-stable"
           VERIFICATION_VALUE: ${{ secrets.VERIFICATION_VALUE }}
