--- a/.github/workflows/puppeteer-cron.yml
+++ b/.github/workflows/puppeteer-cron.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   run-puppeteer:
     runs-on: ubuntu-latest
+
+    environment: prod
     
     steps:
       - name: Checkout repository
@@ -20,9 +22,6 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
-      - name: Print environment variables
-        run: printenv
 
       - name: Run Puppeteer script
         run: node index.ts
