--- a/.github/workflows/puppeteer-cron.yml
+++ b/.github/workflows/puppeteer-cron.yml
@@ -2,7 +2,7 @@ name: Puppeteer Cron Job
 
 on:
   schedule:
-    - cron: "0 7 * * 1,2,3" # Runs at 07:00 UTC every Monday, Tuesday, and Wednesday
+    - cron: "0 7 * * 1,3" # Runs at 07:00 UTC every Monday and Wednesday
   workflow_dispatch: # Allows manual triggering of the workflow
 
 jobs:
